# mini-rag

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: main.py  reason_report.md  slot_report.md
app/api/routes/: search.py
app/core/: config.py  models.py  prompts.py  utils.py
app/services/: search_service.py
