[project]
name = "mini-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.12",
    "fastembed>=0.7.0",
    "httpx>=0.28.1",
    "langchain-openai>=0.3.22",
    "openai>=1.86.0",
    "pydantic>=2.11.5",
    "pydantic-settings>=2.9.1",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "sentence-transformers>=4.1.0",
    "torch>=2.7.1",
    "uvicorn>=0.34.3",
]
